fix: 修复 Code Review 发现的问题 / Fix issues found in code review
Critical:
- 移除 checkHostAccess catch 块中无意义的 if 分支（dead code）
- 修复 isInsideSafeWriteRoot/isOutsideSafeWriteRoot 重复环境变量读取
  （第二次改为 SOLONCLAW_WRITE_SAFE_ROOT 备选）

Important:
- ProcessLifecycleTracker: CopyOnWriteArrayList 改为 synchronized + LinkedList
  （避免 remove(0) 的 O(n) 数组复制）
- DashboardApprovalEventsService: 同上，改为 synchronized + LinkedList
- McpKeepaliveService: close() 添加 awaitTermination(5s) 确保优雅关闭

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>